# aoc-2025

./: .pre-commit-config.yaml  Cargo.toml  Justfile  LICENSE  README.md
aoc-common/: Cargo.toml
aoc-common/src/: grid.rs  lib.rs
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: grid.rs  main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
day22/: Cargo.toml
day22/src/: main.rs
day23/: Cargo.toml
day23/src/: main.rs
day24/: Cargo.toml
day24/src/: main.rs
day25/: Cargo.toml
day25/src/: main.rs
